5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4080/executions/1578_579.log
== TEST (2019-03-13 12:55:41) 
-- CODE:
print(A UFAM tem 107 anos de fundacao.)
-- ERROR:
File "XXXX", line 1
    print(A UFAM tem 107 anos de fundacao.)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:57:10) 
-- CODE:
print("A UFAM tem", 2016 - 107,"anos de fundacao.")
-- OUTPUT:
A UFAM tem 1909 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:57:24) 
-- CODE:
print("A UFAM tem", 2016 - 107,"anos de fundacao.")
-- EXECUTION TIME:
0.186072
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 1909 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:58:40) 
-- CODE:
print("A UFAM tem" , 2016 - 1909,"anos de fundacao.")
-- EXECUTION TIME:
0.14618
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:26:18) 
-- CODE:
print("A UFAM tem" , 2016 - 1909,"anos de fundacao.")
-- EXECUTION TIME:
0.148152
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:53:49) 
-- CODE:
print("A UFAM tem" , 2016 - 1909,"anos de fundacao.")
-- EXECUTION TIME:
0.164271
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
